# rebuilder-template

./: .gitignore  .windsurfrules  AGENTS.md  README.md  SPEC_DEBT.md  STANDARDS.md  WINDSURF.md  prompting.md  scope.md  spec-driven-development.md  spec-locks.yaml  spec-process-overview.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
c-developer-agent/: .windsurfrules  README.md  config.md  skill.md
c-qa-agent/: README.md  config.md  skill.md
developer-agent/: .windsurfrules  README.md  WINDSURF_DEV.md  config.md  skill.md
docs/: cutover-report.md  data-migration-mapping.md  disaster-recovery.md  feature-parity.md
go-developer-agent/: .windsurfrules  README.md  config.md  skill.md
go-qa-agent/: README.md  config.md  skill.md
performance-agent/: README.md  config.md  skill.md
python-developer-agent/: .windsurfrules  README.md  config.md  skill.md
python-qa-agent/: README.md  TEST_RESULTS_TEMPLATE.md  config.md  skill.md
qa-agent/: README.md  TEST_RESULTS_TEMPLATE.md  config.md  skill.md
rebuild/: IDEATION_PROCESS.md  IDEATION_PROCESS_v1.md  input.md  (+2 more)
sre-agent/runtime/: .env.example  Dockerfile  README.md  agent.py  config.py  deploy.sh  docker-compose.yml  intake.py  main.py  models.py  pagerduty_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  state.py  telemetry.py  tools.py
sre-agent/runtime/.venv312/: pyvenv.cfg
sre-agent/runtime/terraform/: main.tf  outputs.tf  variables.tf
sre-agent/runtime/tests/: test_config.py  test_intake.py  test_main.py  test_models.py  test_telemetry.py  test_tools.py
(+69 files in other folders)
