[project]
name = "sre-agent-runtime"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "S104", # Possible binding to all interfaces — intentional for container
    "S603", # subprocess call — not used
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106"]  # Allow assert and test credentials in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
